<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Activities</string>
    <!-- Strings shown in UI  -->
    <string name="visualize">Visualize Data</string>  
    <string name="status">Status</string>
    <string name="activity">Activity</string>
    <string name="accel">Accelerometer</string>
    <string name="steps">Steps</string>
    
 	<string name="viz_spinner_text">Select Visualization</string>
 	<string name="viz_menu_text">Vizualization Menu</string>
    <string name="nullvalue">&#8212;.&#8212;&#8212;</string>
    <string name="action_pick">Select Activity</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    
    <string name="data_collect">Audio Collection</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="status_speech">Speech Status</string>
    <string name="mic_button">Microphone</string>
    
    
    <string name="speech">Speech</string>
    <string name="mic_started">Microphone Started</string>
    <string name="mic_stopped">Microphone Stopped</string>
    <string name="silence">Silence</string>
    <string name="noise">Noise</string>
</resources>
