<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/MainLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TopHorizontalSpaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dip" />

    <RelativeLayout
        android:id="@+id/StartButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TopHorizontalSpaceView"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dip"
            android:padding="10dip"
            android:text="@string/accel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/StartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dip" />
    </RelativeLayout>
    
    <RelativeLayout
    	android:id="@+id/SpeechButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/StartButtonLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="5dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dip"
            android:padding="10dip"
            android:text="@string/mic_button"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/SpeechButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dip" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/VisualizeMenuLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SpeechButtonLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="3dip">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/viz_menu_text"
            android:textSize="20sp"
            android:textStyle="bold" />
            
        <Button
            android:id="@+id/VisualizeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visualize"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="30dip" />
    </RelativeLayout>
        
    <RelativeLayout
        android:id="@+id/VisualizeSpinnerLayout"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
    
        android:layout_below="@id/VisualizeMenuLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="3dip" >
        
      	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/viz_spinner_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      	
        <Spinner
        	android:id="@+id/VisualizeInline"
        	android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:layout_alignParentLeft="true"
        	android:layout_marginLeft="30dip"
        	android:layout_marginTop="0dip"
        	android:layout_marginBottom="0dip"
        	android:padding="0dip" />
        	
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/StepsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/VisualizeSpinnerLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="3dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/steps"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/StepCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/SpeechStatusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/StepsLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="3dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/status_speech"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SpeechStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/ActivityLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SpeechStatusLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="3dip"> 
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/activity"
            android:textSize="20sp"
            android:textStyle="bold"/>
        
        <ImageView
            android:id="@+id/ActivityImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"/>
            
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/StatusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ActivityLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="3dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/status"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/StatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/AccelLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/StatusLayout"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="3dip" >

        <TextView
            android:id="@+id/XView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/x"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelXView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/XView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/YView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/AccelXView"
            android:padding="10dip"
            android:text="@string/y"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelYView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/YView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ZView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/AccelYView"
            android:padding="10dip"
            android:text="@string/z"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelZView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ZView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

	<RelativeLayout
    	android:id="@+id/VisualizeInlineView"
    	android:layout_width="fill_parent"
    	android:layout_height="100dip"
    	android:layout_margin="3dip"
    	
        android:layout_below="@id/AccelLayout"
        android:layout_centerHorizontal="true"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:clickable="true">
    </RelativeLayout>
</RelativeLayout>